@@ -1,4 +1,4 @@
-package com.mutation.runner;
+package com.mutation;
 
 import java.util.List;
 
